--- a/Responsive Navigation bar.html
+++ b/Responsive Navigation bar.html
@@ -13,7 +13,7 @@
                 padding: 0;
                 margin: 0;
                 overflow:hidden;
-                background-color:#333;   
+                background-color:#red;   
             }
             ul.topnav li{
                 float:left;
@@ -30,7 +30,7 @@
                 
             }
             ul.topnav li a.active{
-                background-color:#4CAF40;
+                background-color:yellow;
             
             }
             ul.topnav li.right{
